[package]
name = "backend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
moon.workspace = true
shared = { package = "shared_golem_chat", path = "../shared", features = ["backend"] }
